--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h3>Tmi kmn aco tmi koithi jacco </h3>
     <h3>Tmi kmn aco tmi koithi jacco </h3>
     <h3>Tmi kmn aco tmi koithi jacco </h3>
+    <p>I am a student I live in khulna</p>
+    <h3>Ami coffee khai</h3>
     
 </body>
 </html>
