--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h3>Tmi kmn aco tmi koithi jacco </h3>
     <p>I am a student I live in khulna</p>
     <h3>Ami coffee khai</h3>
-    
+    <img src="images32.jpg" alt="Natural Picture">
+    <img src="index.jpg" alt="">
 </body>
 </html>
